--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,9 +31,15 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install build
+      
+      - name: Clean old build artifacts 
+        run: rm -rf dist build *.egg-info
 
       - name: Build package
         run: python -m build .
+      
+      - name: Show dist contents 
+        run: ls -l dist
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@v1.10.0
