--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,9 +19,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Debug directory 
-        run: ls -R .
-        
+      - name: Show workspace root
+        run: ls -l .
+  
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
