--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "category-embedding"
 version = "0.1.1"
 description = "A Keras-based entity embedding encoder for tabular ML and GBM pipelines"
-readme = "README.md"
+readme = "README.MD"
 requires-python = ">=3.9"
 license = { file = "LICENSE" }
 authors = [
