--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v4
       
       - name: Show workspace root 
-        run: ls -R .
+        run: pwd
   
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -36,6 +36,7 @@ jobs:
         run: rm -rf dist build *.egg-info
 
       - name: Build package
+        working-directory: category-embedding
         run: python -m build .
       
       - name: Inspect wheel metadata 
