--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,9 @@ jobs:
 
       - name: Clean old build artifacts
         run: rm -rf dist build *.egg-info
+      
+      - name: Confirm pyproject exists
+        run: ls -l pyproject.toml
 
       - name: Build package
         run: python -m build .
