--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Install build tools
         run: |
           python -m pip install --upgrade pip
+          python -m pip install --upgrade setuptools wheel
           python -m pip install build
 
       - name: Clean old build artifacts
